--- a/client/style.css
+++ b/client/style.css
@@ -1,3 +1,8 @@
-h1 {
-  font-size: 100%;
+.myGrid {
+    width: 80%;
+    height: 250px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
