--- a/client/style.css
+++ b/client/style.css
@@ -62,6 +62,8 @@ button {
   background-color: green;
   display: block;
   margin:1em auto;
+  padding: .5em;
+  font-size: .75em;
 }
 
 .treeTable {
