--- a/client/style.css
+++ b/client/style.css
@@ -57,7 +57,7 @@ body {
   background-position: center center;
 }
 
-button {
+.greenButton {
   color: white;
   background-color: green;
   display: block;
